crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@232.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_mul VALUES (5,2,'649411906691138274293985410502516861224852.2323455192714410716272307781034189160865613770320102043319541634113746032638191509585045862973333645830298922352816245477556264222094036953195419857712804755170632292914187367964994214922001758104594052499795564860466055599417895782179851297585155129541589802249540436678824225950907268084876110445460948679383611117263673106597132046331719468816839434908155684738864149955129235751738204036443603521478609787295079710078973503970964790273461142497259987849074597264522099648376356902360358310245001183020992360260836105404118742418040965190000718736837422434593694808973939805954329718232693154128543253581495885789333274488461716809104532693754070810202831113003978085636579574171344721710232931261731022478029314435363413498991740750878099825781577297965642009156858479681236085226911858782115');"
---
InsertStmt@0..879
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_mul"
  Whitespace@23..24 " "
  SelectStmt@24..877
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..877
      AConst@32..33
        Iconst@32..33 "5"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "2"
      Ascii44@35..36 ","
      AConst@36..877
        Sconst@36..877 "'64941190669113827429 ..."
  Ascii41@877..878 ")"
  Ascii59@878..879 ";"

